objects/ProductEntitlement__c.object
<CustomObject>
    <description>SFDC1-7972 Product Entitlement object is used to hold the details about the user entitlements and licenses.</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>SFDC1-6785 End date of the validity of the entitlement</description>
        <inlineHelpText>The last date this Entitlement is valid until.  Date can be in the future.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <description>SFDC1-6785 Formula to evaluate if Entitlement is still valid based on Start and End Date</description>
        <formula>IF(AND(ISBLANK(StartDate__c), ISBLANK(EndDate__c)), True, 
IF(AND(NOT(ISBLANK(StartDate__c)), ISBLANK(EndDate__c), (StartDate__c &lt;= TODAY())), True, 
IF(AND(NOT(ISBLANK(StartDate__c)),NOT(ISBLANK(EndDate__c)), (StartDate__c &lt;= TODAY()), (EndDate__c &gt;= TODAY())), True, 
IF(AND(ISBLANK(StartDate__c), NOT(ISBLANK(EndDate__c)), (EndDate__c &gt;= TODAY())), True, False ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specifies if the Entitlement is still valid.</inlineHelpText>
        <label>Is Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-6785: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (user unfriendly) referencing the source record and is populated via migrating system.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PKIDProductEntitlement__c</fullName>
        <description>SFDC1-6785 PKID is used for data migration support from the legacy system</description>
        <displayFormat>Ent{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>PKID is used for data migration support from the legacy system and is auto-generated</inlineHelpText>
        <label>PKID Product Entitlement</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductLicense__c</fullName>
        <description>SFDC1-6785 Product License related to this entitlement</description>
        <inlineHelpText>Links the Product License related to this Entitlement record.</inlineHelpText>
        <label>Product License</label>
        <referenceTo>ProductLicense__c</referenceTo>
        <relationshipLabel>Product Entitlements</relationshipLabel>
        <relationshipName>ProductEntitlements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <description>SFDC1-7972 Product Login related to this entitlement</description>
        <inlineHelpText>Link the Product Login to this Entitlement record.</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Product Entitlements</relationshipLabel>
        <relationshipName>ProductEntitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>SFDC1-6785 Source of the entitlement data</description>
        <inlineHelpText>Data can be uploaded automatically from external entitlement and authentications systems or entered manually.</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>MSF</fullName>
                </value>
                <value>
                    <fullName>UserXS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>SFDC1-6785 Inital set-up date of the entitlement in the external source system</description>
        <inlineHelpText>Initial set-up date of the Entitlement in the external source system.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9420 Flag to indicate if the product entitled is for Trial</description>
        <inlineHelpText>Flag to indicate if the product entitled is for Trial</inlineHelpText>
        <label>Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueProductEntitlementID__c</fullName>
        <description>SFDC1-6785 Unique Identifier of the product entitlement</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID is normally provided by the external source system, if it is not provided, it is populated automatically.</inlineHelpText>
        <label>Unique Product Entitlement ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Entitlement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PEN-{000000}</displayFormat>
        <label>Product Entitlement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MandatoryMSFASegmentFieldOnAddProdLog</fullName>
        <active>true</active>
        <description>SFDC-228 Additional Product Login Fields - &quot;MSFA Segment&quot; field should be mandatory for &quot;Securities Finance&quot; Product Licenses</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ProductEntitlement__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
AND( 
ISNEW(), 
CONTAINS(ProductLicense__r.Name , &apos;SecuritiesFinance&apos;), 
INCLUDES(ProductLogin__r.Source__c,&quot;MSF&quot;), 
ISPICKVAL(ProductLogin__r.AdditionalProductLoginFields__r.MSFASegment__c,&quot;&quot;) 
)
)</errorConditionFormula>
        <errorMessage>&quot;MSFA Segment&quot; field of Additional Product Login Fields mandatory for &quot;Securities Finance&quot; Product Licenses</errorMessage>
    </validationRules>
</CustomObject>